<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/icon_nav_home"
        android:title="@string/bottom_nav_home" />
    <item
        android:id="@+id/menu_feed"
        android:icon="@drawable/icon_nav_feed"
        android:title="@string/bottom_nav_feed" />
    <item
        android:id="@+id/menu_playlist"
        android:icon="@drawable/icon_nav_playlist"
        android:title="@string/bottom_nav_playlist" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/icon_nav_search"
        android:title="@string/bottom_nav_search" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/icon_nav_profile"
        android:title="@string/bottom_nav_profile" />
</menu>